LLM4Config/assets/truefoundry_tfy-istio-ingress.yaml
---
# Source: tfy-istio-ingress/charts/gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-tfy-istio-ingress
  namespace: default
  labels:
    helm.sh/chart: gateway-1.21.1
    app: my-tfy-istio-ingress
    istio: my-tfy-istio-ingress
    app.kubernetes.io/version: "1.21.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: my-tfy-istio-ingress
  annotations:
    {}
spec:
  type: LoadBalancer
  ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: my-tfy-istio-ingress
    istio: my-tfy-istio-ingress
---
# Source: tfy-istio-ingress/charts/gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-tfy-istio-ingress
  namespace: default
  labels:
    helm.sh/chart: gateway-1.21.1
    app: my-tfy-istio-ingress
    istio: my-tfy-istio-ingress
    app.kubernetes.io/version: "1.21.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: my-tfy-istio-ingress
  annotations:
    {}
spec:
  selector:
    matchLabels:
      app: my-tfy-istio-ingress
      istio: my-tfy-istio-ingress
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "true"
      labels:
        sidecar.istio.io/inject: "true"
        app: my-tfy-istio-ingress
        istio: my-tfy-istio-ingress
    spec:
      serviceAccountName: my-tfy-istio-ingress
      securityContext:
        # Safe since 1.22: https://github.com/kubernetes/kubernetes/pull/103326
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      containers:
        - name: istio-proxy
          # "auto" will be populated at runtime by the mutating webhook. See https://istio.io/latest/docs/setup/additional-setup/sidecar-injection/#customizing-injection
          image: auto
          securityContext:
            # Safe since 1.22: https://github.com/kubernetes/kubernetes/pull/103326
            capabilities:
              drop:
              - ALL
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsUser: 1337
            runAsGroup: 1337
            runAsNonRoot: true
          ports:
          - containerPort: 15090
            protocol: TCP
            name: http-envoy-prom
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
      terminationGracePeriodSeconds: 30
---
# Source: tfy-istio-ingress/templates/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: 
  namespace: istio-system
spec:
  selector:
    istio: 'my-tfy-istio-ingress'
  servers:
  - hosts: []
    port:
      name: http-tfy-wildcard
      number: 80
      protocol: HTTP
      tls:
        httpsRedirect: true
  - hosts: []
    port:
      name: https-tfy-wildcard
      number: 443
      protocol: HTTPS
